--- a/css/style.css
+++ b/css/style.css
@@ -820,6 +820,7 @@ label {
     }
     .footer-form-item label {
         align-self: flex-start;
+        padding-bottom: .5rem;
     }
     .footer-media {
         flex-direction: row;
